--- a/index.html
+++ b/index.html
@@ -1,1 +1,353 @@
-<html>Nicolas na cabeça da moranga veiuda!  _|_</html>
+<!DOCTYPE html>
+<html>
+
+<head><!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" /><!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" /><!-- Site Metas -->
+  <meta name="keywords" content="toldos, coberturas, proteção solar, Ribeirão Preto, NC Toldos e Coberturas" />
+  <meta name="description"
+    content="NC Toldos e Coberturas oferece soluções personalizadas em toldos e coberturas para proteção e conforto em Ribeirão Preto e região." />
+  <meta name="author" content="NC Toldos e Coberturas" />
+  <link rel="shortcut icon" href="images/fevicon.png" type="">
+  <title>NC Toldos e Coberturas</title><!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" /><!-- fonts style -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <!--owl slider stylesheet -->
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <!-- font awesome style -->
+  <link href="css/font-awesome.min.css" rel="stylesheet" /><!-- Custom styles for this template -->
+  <link href="css/style.css" rel="stylesheet" /><!-- responsive style -->
+  <link href="css/responsive.css" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="hero_area"><!-- header section starts -->
+    <header class="header_section">
+      <div class="header_top">
+        <div class="container-fluid ">
+          <div class="contact_nav"><a href=""><i class="fa fa-phone" aria-hidden="true"></i><span>
+                Ligue: (16) 99153-0467
+              </span></a><a href=""><i class="fa fa-envelope" aria-hidden="true"></i><span>
+                Email: contato@nctoldos.com.br
+              </span></a><a href=""><i class="fa fa-map-marker" aria-hidden="true"></i><span>
+                Ribeirão Preto, SP
+              </span></a></div>
+        </div>
+      </div>
+      <div class="header_bottom">
+        <div class="container-fluid">
+          <nav class="navbar navbar-expand-lg custom_nav-container "><a class="navbar-brand" href="#home"><span>
+                NC Toldos e Coberturas
+              </span></a><button class="navbar-toggler" type="button" data-toggle="collapse"
+              data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+              aria-label="Toggle navigation"><span class=""></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav  ">
+                <li class="nav-item active"><a class="nav-link" href="#home">Início
+                    <spanclass="sr-only">(current)</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="#services">Serviços</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">Sobre Nós</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contato</a></li>
+                
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </header><!-- end header section --><!-- slider section -->
+    <section id="home" class="slider_section">
+      <div class="slider_bg_box"><img src="images/slider-bg.jpg" alt=""></div>
+      <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container ">
+              <div class="row">
+                <div class="col-md-7 ">
+                  <div class="detail-box">
+                    <h1>
+                      Proteja seu espaço com <br>
+                      Toldos e Coberturas de Qualidade
+                    </h1>
+                    <p>
+                      Na NC Toldos e Coberturas, oferecemos soluções que combinam durabilidade e design, proporcionando
+                      proteção contra sol e chuva para residências e empresas em Ribeirão Preto e região.
+                    </p>
+                    <div class="btn-box"><a
+                        href="https://api.whatsapp.com/send?phone=5516991530467&text=Ola,%20vim%20atraves%20do%20site.%20Gostaria%20de%20fazer%20um%20or%C3%A7amento"
+                        class="btn1">
+                        Solicite um Orçamento
+                      </a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!-- Adicione mais slides se necessário -->
+        </div>
+        <ol class="carousel-indicators">
+          <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
+        </ol>
+      </div>
+    </section><!-- end slider section -->
+  </div><!-- service section -->
+  <section id="services" class="service_section layout_padding">
+    <div class="service_container">
+      <div class="container ">
+        <div class="heading_container">
+          <h2>
+            Nossos <span>Serviços</span></h2>
+          <p>
+            Oferecemos uma ampla gama de soluções em toldos e coberturas, personalizadas para atender às suas
+            necessidades específicas.
+          </p>
+        </div>
+        <div class="row">
+          <div class="col-md-6 ">
+            <div class="box ">
+              <div class="img-box"><img src="images/s1.png" alt=""></div>
+              <div class="detail-box">
+                <h5>
+                  Toldos Retráteis
+                </h5>
+                <p>
+                  Versatilidade e praticidade para espaços que precisam de proteção ajustável contra sol e chuva.
+                </p><a href="#contact">
+                  Saiba Mais
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 ">
+            <div class="box ">
+              <div class="img-box"><img src="images/s2.png" alt=""></div>
+              <div class="detail-box">
+                <h5>
+                  Coberturas Fixas
+                </h5>
+                <p>
+                  Soluções robustas e duradouras para áreas que necessitam de proteção permanente.
+                </p><a href="#contact">
+                  Saiba Mais
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 ">
+            <div class="box ">
+              <div class="img-box"><img src="images/s3.png" alt=""></div>
+              <div class="detail-box">
+                <h5>
+                  Pergolados
+                </h5>
+                <p>
+                  Estilo e funcionalidade, criando espaços agradáveis e protegidos em jardins e varandas.
+                </p><a href="#contact">
+                  Saiba Mais
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 ">
+            <div class="box ">
+              <div class="img-box"><img src="images/s4.png" alt=""></div>
+              <div class="detail-box">
+                <h5>
+                  Manutenção de Toldos
+                </h5>
+                <p>
+                  Serviços de reparo e manutenção para garantir a longevidade e a eficiência das suas coberturas.
+                </p><a href="#contact">
+                  Saiba Mais
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section><!-- end service section --><!-- about section -->
+  <section id="about" class="about_section layout_padding-bottom">
+    <div class="container  ">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h2>
+                Sobre <span>Nós</span></h2>
+            </div>
+            <p>
+              Com anos de experiência, a NC Toldos e Coberturas é referência em Ribeirão Preto e região. Trabalhamos com
+              materiais de alta qualidade e mão de obra especializada para oferecer as melhores soluções em proteção e
+              estilo para sua casa ou empresa.
+            </p><a href="#contact">
+              Saiba Mais
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 ">
+          <div class="img-box"><img src="images/about-img.jpg" alt=""></div>
+        </div>
+      </div>
+    </div>
+  </section><!-- end about section --><!-- client section -->
+  <section class="client_section layout_padding">
+    <div class="container">
+      <div class="heading_container">
+        <h2>
+          Depoimentos de nossos <span>Clientes</span></h2>
+      </div>
+      <div class="client_container">
+        <div class="carousel-wrap ">
+          <div class="owl-carousel">
+            <div class="item">
+              <div class="box">
+                <div class="detail-box">
+                  <p>
+                    "A NC Toldos e Coberturas superou nossas expectativas! A instalação foi rápida e o resultado ficou
+                    incrível."
+                  </p>
+                </div>
+                <div class="client_id">
+                  <div class="img-box"><img src="images/client-1.png" alt="" class="img-1"></div>
+                  <div class="name">
+                    <h6>
+                      Maria Silva
+                    </h6>
+                    <p>
+                      Ribeirão Preto, SP
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="box">
+                <div class="detail-box">
+                  <p>
+                    "Excelente atendimento e produtos de alta qualidade. Recomendo a todos que precisam de toldos ou
+                    coberturas."
+                  </p>
+                </div>
+                <div class="client_id">
+                  <div class="img-box"><img src="images/client-2.png" alt="" class="img-1"></div>
+                  <div class="name">
+                    <h6>
+                      João Pereira
+                    </h6>
+                    <p>
+                      Cravinhos, SP
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div><!-- Adicione mais depoimentos se necessário -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </section><!-- end client section --><!-- contact section -->
+  <section id="contact" class="contact_section">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4 col-md-5 offset-md-1">
+          <div class="heading_container">
+            <h2>
+              Contato
+            </h2>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-5 offset-md-1">
+          <div class="form_container contact-form">
+            <form action="">
+              <div><input type="text" placeholder="Seu Nome" /></div>
+              <div><input type="text" placeholder="Telefone" /></div>
+              <div><input type="email" placeholder="Email" /></div>
+              <div><input type="text" class="message-box" placeholder="Mensagem" /></div>
+              <div class="btn_box"><button>
+                  ENVIAR
+                </button></div>
+            </form>
+          </div>
+        </div>
+        <div class="col-lg-7 col-md-6 px-0">
+          <div class="map_container">
+            <div class="map">
+              <div id="googleMap"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section><!-- end contact section --><!-- info section -->
+  <section class="info_section layout_padding2">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-lg-3 info_col">
+          <div class="info_contact">
+            <h4>
+              Endereço
+            </h4>
+            <div class="contact_link_box"><a href=""><i class="fa fa-map-marker" aria-hidden="true"></i><span>
+                  Ribeirão Preto, SP
+                </span></a><a href=""><i class="fa fa-phone" aria-hidden="true"></i><span>
+                  Ligue: (16) 99153-0467
+                </span></a><a href=""><i class="fa fa-envelope" aria-hidden="true"></i><span>
+                  Email: contato@nctoldos.com.br
+                </span></a></div>
+          </div>
+          <div class="info_social"><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a><a href=""><i
+                class="fa fa-twitter" aria-hidden="true"></i></a><a href=""><i class="fa fa-linkedin"
+                aria-hidden="true"></i></a><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+        </div>
+        <div class="col-md-6 col-lg-3 info_col">
+          <div class="info_detail">
+            <h4>
+              Informações
+            </h4>
+            <p>
+              A NC Toldos e Coberturas oferece o que há de melhor em soluções para proteção e estilo de ambientes.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-2 mx-auto info_col">
+          <div class="info_link_box">
+            <h4>
+              Links
+            </h4>
+            <div class="info_links"><a class="active" href="#home"><img src="images/nav-bullet.png" alt="">
+                Início
+              </a><a class="" href="#about"><img src="images/nav-bullet.png" alt="">
+                Sobre Nós
+              </a><a class="" href="#services"><img src="images/nav-bullet.png" alt="">
+                Serviços
+              </a><a class="" href="#contact"><img src="images/nav-bullet.png" alt="">
+                Contato
+              </a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section><!-- end info section --><!-- footer section -->
+  <section class="footer_section">
+    <div class="container">
+      <p>&copy;<span id="displayYear"></span> Todos os Direitos Reservados por NC Toldos e Coberturas
+      </p>
+    </div>
+  </section><!-- end footer section --><!-- jQery -->
+  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script><!-- popper js -->
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script><!-- bootstrap js -->
+  <script type="text/javascript" src="js/bootstrap.js"></script><!-- owl slider -->
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script><!-- custom js -->
+  <script type="text/javascript" src="js/custom.js"></script><!-- Google Map -->
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+  <!-- End Google Map -->
+</body>
+
+</html>
