--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="contact_nav"><a href=""><i class="fa fa-phone" aria-hidden="true"></i><span>
                 Ligue: (16) 99153-0467
               </span></a><a href=""><i class="fa fa-envelope" aria-hidden="true"></i><span>
-                Email: contato@nctoldos.com.br
+                Email: contato@nctoldosecoberturas.com.br
               </span></a><a href=""><i class="fa fa-map-marker" aria-hidden="true"></i><span>
                 Ribeirão Preto, SP
               </span></a></div>
@@ -45,8 +45,7 @@
               aria-label="Toggle navigation"><span class=""></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav  ">
-                <li class="nav-item active"><a class="nav-link" href="#home">Início
-                    <spanclass="sr-only">(current)</span></a></li>
+                <li class="nav-item active"><a class="nav-link" href="#home">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#services">Serviços</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">Sobre Nós</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contato</a></li>
@@ -209,10 +208,10 @@
                   </p>
                 </div>
                 <div class="client_id">
-                  <div class="img-box"><img src="images/client-1.png" alt="" class="img-1"></div>
+                  <div class="img-box"><img src="images/clientMaria.png" alt="" class="img-1"></div>
                   <div class="name">
                     <h6>
-                      Maria Silva
+                      - -
                     </h6>
                     <p>
                       Ribeirão Preto, SP
@@ -226,17 +225,17 @@
                 <div class="detail-box">
                   <p>
                     "Excelente atendimento e produtos de alta qualidade. Recomendo a todos que precisam de toldos ou
-                    coberturas."
+                    coberturas. Otimo atendimento"
                   </p>
                 </div>
                 <div class="client_id">
-                  <div class="img-box"><img src="images/client-2.png" alt="" class="img-1"></div>
+                  <div class="img-box"><img src="images/Joao.png" alt="" class="img-1"></div>
                   <div class="name">
                     <h6>
-                      João Pereira
+                      Yago Cardoso
                     </h6>
                     <p>
-                      Cravinhos, SP
+                      Bonfim Paulista, SP
                     </p>
                   </div>
                 </div>
@@ -295,7 +294,7 @@
                 </span></a><a href=""><i class="fa fa-phone" aria-hidden="true"></i><span>
                   Ligue: (16) 99153-0467
                 </span></a><a href=""><i class="fa fa-envelope" aria-hidden="true"></i><span>
-                  Email: contato@nctoldos.com.br
+                  Email: contato@nctoldosecoberturas.com.br
                 </span></a></div>
           </div>
           <div class="info_social"><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a><a href=""><i
